# Radon

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Metal-Engine.wsp  build.sh  imgui.ini  vcpkg.json
docs/: build.md  roadmap.md
engine_assets/screen_shader/: frag.glsl  vert.glsl
include/classes/: audiosource.h  camera.h  camera.ixx  component.h  dynamic_data.h  editable.h  editable.ixx  level.h  level.ixx  light.h  light.ixx  material.h  material.ixx  mesh.h  meshrenderer.h  model.h  modelrenderer.h  object.h  object.ixx  physicsobject.h  shader.h  shader.ixx  sprite.h  sprite.ixx  texture.h  texture.ixx  transform.h  vertex.h
include/engine/: asset_manager.h  audio.h  audio.ixx  debug.h  debug.ixx  devgui.h  devgui.ixx  engine.h  filesystem.h  global.h  input.h  input.ixx  interface.h  io.h  io.ixx  job_system.h  localization.h  localization.ixx  physics.h  physics.ixx  render.h  render.ixx  telemetry.h  telemetry.ixx
model_test/: frag.glsl  vert.glsl
screen_blur/: frag.glsl  vert.glsl
screen_shader/: frag.glsl  vert.glsl
sprite_shader/: frag.glsl  vert.glsl
sprite_test/: frag.glsl  vert.glsl
sprite_test_2/: frag.glsl
src/: asset_manager.cc  audio.c  audio.cc  audiosource.cc  debug.cc  devgui.cc  dynamic_data.cc  editable.cc  engine.cc  filesystem.cc  global.cc  input.cc  interface.cc  io.cc  io_model.cc  io_texture.cc  job_system.cc  level.cc  light.cc  localization.cc  main.cc  material.cc  mesh.cc  meshrenderer.cc  model.cc  modelrenderer.cc  object.cc  physics.c  physics.cc  physicsobject.cc  render.cc  shader.cc  sprite.cc  telemetry.cc  texture.cc  transform.cc
