cmake_minimum_required(VERSION 3.21)
project(Metal VERSION 0.1)
file(GLOB_RECURSE SOURCES "src/*.cc")
file(GLOB_RECURSE HEADERS "include/*.h")
find_package(assimp CONFIG REQUIRED)
find_package(box2d CONFIG REQUIRED)
find_package(fmt CONFIG REQUIRED)
find_package(Freetype CONFIG REQUIRED)
find_package(glad CONFIG REQUIRED)
find_package(glfw3 CONFIG REQUIRED)
find_package(glm CONFIG REQUIRED)
find_package(ImGui CONFIG REQUIRED)
find_package(OpenAL CONFIG REQUIRED)
find_package(OpenGL REQUIRED)
find_package(pugixml CONFIG REQUIRED)
find_package(Stb REQUIRED)
add_executable(Metal ${SOURCES})
if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
  target_compile_features(Metal PRIVATE cxx_std_23)
else()
  target_compile_features(Metal PRIVATE cxx_std_20)
  target_compile_definitions(Metal PRIVATE MDEBUG_DISABLE_TRACE)
endif()
target_include_directories(Metal PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_include_directories(Metal PRIVATE ${Stb_INCLUDE_DIR})
target_link_libraries(Metal PRIVATE assimp::assimp)
target_link_libraries(Metal PRIVATE box2d::box2d)
target_link_libraries(Metal PRIVATE fmt::fmt)
target_link_libraries(Metal PRIVATE Freetype::Freetype)
target_link_libraries(Metal PRIVATE glad::glad)
target_link_libraries(Metal PRIVATE glfw)
target_link_libraries(Metal PRIVATE glm::glm)
target_link_libraries(Metal PRIVATE imgui::imgui)
target_link_libraries(Metal PRIVATE OpenAL::OpenAL)
target_link_libraries(Metal PRIVATE OpenGL::GL)
target_link_libraries(Metal PRIVATE pugixml::pugixml)
